--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # Install
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['install']
+    args: ['ci']
   # Build
   - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build']
