--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
-        "deploy:dev": "firebase use default && firebase deploy",
-        "deploy:prod": "firebase use production && firebase deploy"
+        "echo": "echo \"$FIREBASE_TOKEN\"",
+        "deploy": "cross-env firebase deploy --debug --token \"$FIREBASE_TOKEN\""
     },
     "dependencies": {
         "core-js": "^3.3.2",
+        "firebase": "^7.2.3",
         "register-service-worker": "^1.6.2",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
@@ -26,6 +27,7 @@
         "@vue/cli-service": "^4.0.0",
         "@vue/eslint-config-prettier": "^5.0.0",
         "@vue/eslint-config-typescript": "^4.0.0",
+        "cross-env": "^6.0.3",
         "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^5.0.0",
